# enginsights-dashboard

./: .gitignore  DESIGN.md  LICENSE  README.md  app.py  pyproject.toml
data/: README.md
src/: data_loader.py  fetch_github_data.py
src/enginsights_dashboard/: app.py  config.py  data_loader.py  fetch_github_data.py  summary_engine.py
tests/: test_summary_engine.py
